@@ -5,9 +5,11 @@
 v1.05 ()
     [+] Stick to the Media Player Remote Interface Specifications (#534021)
     [+] Show some information on the selected tracks in the status bar
+    [+] Added presets to the equalizer
     [-] Skips two songs when one is not found (#581654)
     [-] Fixed crash in some rare occasions when trying to set the cover for the current track
     [-] Gnome media keys no longer working when starting/closing multiple instances
+    [-] Fixed labels not always properly updated in the equalizer
     [ ] The playbin2 GStreamer component is now used by default (use the --playbin flag to use the old playbin component)
     [ ] Equalizer module has a menu item (CTRL-E) when enabled (#495761)
     [ ] Close properly on CTRL-C
